@@ -1,4 +1,5 @@
 * Use literal_eval instead of safe_eval (CVE-2014-6633)
+* Prevent double underscore in safe_eval (CVE-2014-6633)
 
 Version 2.6.13 - 2014-08-03
 * Bug fixes (see mercurial logs for details)
